--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ nav a {
 
     color: white;
     display: block;
-    padding: 20 px;
+    padding: 20px;
 }
 
 h1 {
@@ -27,6 +27,40 @@ img {
 p {
     padding: 10px;
 }
+
+main{
+    max-width: 840px;
+
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
+main img {
+    width: 150px;
+    height: auto;
+}
+
+p {padding: 0;}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2); /* 1️⃣ */
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+
 
 
 
