--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -8,7 +8,7 @@
     --background-color: #ededed;
     --link-color: #094074;
     --hover-link-color: #2d97c8;
-    --hover-color: #b04e4b;
+    --hover-color: #ededed;
     --hover-background-color: #ededed;
     --font-family: 'Roboto' sans-serif;
 
@@ -49,7 +49,7 @@ nav {
 }
 
 .navigation a:hover {
-	color: tomato;
+	color: #ededed;
 	font-weight: 700;
 	text-decoration: underline;
 }
@@ -81,11 +81,181 @@ body {
       }
 
 body {
-    background-color: #ededed;
+    background-color: #a4a4a48f;
     color: var(--font2-color);
     font-family: var(--font-family);
     
 }
+
+body {
+  
+}
+
+.company-info {
+  padding: 20px;
+  background-color: #ffffff;
+  color: #ffffff;
+}
+
+.company-info h2 {
+  margin-bottom: 30px;
+  
+}
+
+.employee {
+  display: inline-block;
+  margin-right: 20px;
+  text-align: center;
+  color: #ccc;
+}
+
+
+
+#company-info img {
+  width: 200px;
+  height: 200px;
+  border-radius: 30%;
+  margin-bottom: 10px;
+ display: block;
+ 
+}
+
+
+#company-info p {
+  text-align:justify;
+  color: #000000;
+  background-color: #b04e4b
+}
+
+.employee img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  background-color: #16191b00;
+}
+
+.employee :hover {
+  transform: scale(1.40);
+  cursor: crosshair;
+  opacity: 1;
+  filter: contrast(120%);
+  font-style: italic;
+}
+  
+
+.embedded-map {
+  margin-top: px;
+  border: #000000;
+}
+
+.contact-form {
+  width: 650px;
+  margin: 0 auto;
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+
+
+#contact-form input[type="text"],
+#contact-form input[type="email"],
+#contact-form textarea {
+  width: 98%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #0000008c;
+}
+
+fieldset {
+  grid-gap: 0.5rem;
+  margin: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  background-color: #c5c5c577;
+}
+
+legend {
+  padding: 0.5rem;
+  color: #000000;
+  font-size: 1.3em;
+}
+
+label, input, button, select, textarea {
+  font-family: 'Roboto', sans-serif;
+  color: #302f2f;
+  
+}
+
+label {
+  text-align: right;
+  padding-right: 1rem;
+}
+
+input[type="checkbox"] {
+  margin-top: 10px;
+}
+
+button {
+  background-color: #4b6e52;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+button:hover {
+  background-color: #0056b3;
+}
+
+
+footer {
+  background-color:#0000008c;
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  
+  margin: 1rem auto;
+  
+  display: flex;
+  justify-content: space-between;
+  gap: 700px;  
+  opacity: .8;
+}
+
+.backround {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+
+.social-icons {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.social-icons img {
+  width: 30px;
+  height: auto;
+}
+
+.social-icons :hover {
+
+transform: scale(1.15);
+}
+
 /* TITLES */
 
 h1 {
@@ -127,35 +297,45 @@ a {
     border: none;         
   }
 
-  .social-link {
+  .sociallink {
     color: var(--secondary-color); 
   }
   
-  .social-link:hover {
-    color: var(--primary-color); 
+  .sociallink:hover {
+    transform: scale(1.40);
+    color: var(--background-color); 
   }
+
+  .social-icons :hover {
+  
+    transform: scale(1.15);
+   }
 
 
   /* FOOTER */
 
   footer {
-    background-color:#b04e4b;
+    background-color:#aaa6a53c;
     color: rgba(255, 255, 255, 0.89);
-    padding: 20px;
+    padding: 10px;
     border-top: 1px solid rgb(255, 255, 255);
     margin: 1rem auto;
     border-bottom: 1px solid rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
     gap: 400px;  
-    opacity: .8;
   }
 
   /*HERO*/
 
-.hero {
+.hero div {
     position: relative; 
     width: 100%; 
+  }
+
+  .hero div h1 {
+    position:absolute;
+    width: 100%;
   }
 
   .hero img {
